crates/pcb/tests/snapshots/build__transitive_unstable_dependencies.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: '@github/thirdparty/utils:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/cache/github/mycompany/intermediate/v1.0.0/pcb.toml:3:9 ]
 3 │utils = "@github/thirdparty/utils:main"
   │                       ╰──────────────── '@github/thirdparty/utils:main' is an unstable reference. Use a pinned version.
   ├─[ <TEMP_DIR>/cache/github/mycompany/intermediate/v1.0.0/IntermediateComponent.zen:3:6 ]
 3 │load("@utils/Utility.zen", "utility_function")
   │               ╰────────── '@utils' is an unstable reference. Use a pinned version.
   ├─[ <TEMP_DIR>/board.zen:2:25 ]
 2 │IntermediateComponent = Module("@intermediate/IntermediateComponent.zen")
   │                                                ╰───────────────────────── Warning from `@intermediate/IntermediateComponent.zen`

✓ board.zen (1 components)
