crates/pcb/tests/snapshots/build__unstable_ref_wrong_tag.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: '@github/mycompany/components:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/board.zen:2:18 ]
 2 │SimpleResistor = Module("@github/mycompany/components:main/SimpleResistor.zen")
   │                                                ╰─────────────────────────────── '@github/mycompany/components:main' is an unstable reference. Use a pinned version.

✓ board.zen (0 components)
